html y css edited

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Bienvenidos a mi blog!</h1>
+    <h1>Bienvenidos a mi blog</h1>
 </body>
 </html>
