--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Bienvenidos a mi blog</h1>
+    <div id="container">
+        <h1>Bienvenidos a mi blog</h1>
+        <div id="post">
+            <h1>Este es el titulo del post</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod distinctio veritatis cumque reprehenderit, excepturi quia molestiae quae eaque hic magni sapiente sit provident? Fugit animi facere optio molestias architecto alias?</p>
+        </div>
+    </div>
 </body>
 </html>
