--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            cabecera
+        </div>
         <h1>Bienvenidos a mi blog</h1>
         <div id="post">
             <h1>Este es el titulo del post</h1>
