finalizada la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            cabecera
+            DM_blog
+            <span id="tagline">el mejor blog de cartagena</span>
         </div>
         <h1>Bienvenidos a mi blog</h1>
         <div id="post">
