se agrego contenido y se cambio la tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,8 +11,9 @@
     <div id="container">
         <h1>Bienvenidos a mi blog</h1>
         <div id="post">
-            <h1>Este es el titulo del post</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod distinctio veritatis cumque reprehenderit, excepturi quia molestiae quae eaque hic magni sapiente sit provident? Fugit animi facere optio molestias architecto alias?</p>
+            <h1>Beneficios del levantamiento de pesas en la salud y la condición física</h1>
+            <p>Hola a todos! Hoy quiero hablarles sobre mi experiencia con el levantamiento de pesas. Desde que comencé a incorporar esta actividad en mi rutina de ejercicios, he visto una gran mejora en mi fuerza y en mi forma física en general.</p>
+            <p>Pero el levantamiento de pesas no es solo para aquellos que buscan tener un cuerpo musculoso o competir en campeonatos de fisicoculturismo. También es una excelente forma de fortalecer los huesos y prevenir la pérdida de masa ósea a medida que envejecemos, además de mejorar la postura y la estabilidad del cuerpo. Así que si estás buscando una forma efectiva de mejorar tu salud y tu condición física, ¡definitivamente debes considerar agregar el levantamiento de pesas a tu rutina de entrenamiento!</p>
         </div>
     </div>
 </body>
