modifique la cabecera y el color del texto

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             DM_blog
-            <span id="tagline">el mejor blog de cartagena</span>
+            <span id="tagline">el mejor blog de cabecera</span>
         </div>
         <h1>Bienvenidos a mi blog</h1>
         <div id="post">
