clor de fondo, logo nuevo y color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img src="./imagenes/messi.jpg" alt="logo" id="logo">
             DM_blog
             <span id="tagline">el mejor blog de cabecera</span>
         </div>
