--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,9 @@
             <p>Pero el levantamiento de pesas no es solo para aquellos que buscan tener un cuerpo musculoso o competir en campeonatos de fisicoculturismo. También es una excelente forma de fortalecer los huesos y prevenir la pérdida de masa ósea a medida que envejecemos, además de mejorar la postura y la estabilidad del cuerpo. Así que si estás buscando una forma efectiva de mejorar tu salud y tu condición física, ¡definitivamente debes considerar agregar el levantamiento de pesas a tu rutina de entrenamiento!</p>
             <p>Una de las cosas más gratificantes del levantamiento de pesas es ver los progresos que has hecho a lo largo del tiempo. Cada vez que aumentas la cantidad de peso que levantas o el número de repeticiones que puedes hacer, es una señal de que tu cuerpo está cada vez más fuerte y en mejor forma. Pero es importante recordar que el levantamiento de pesas es una actividad que requiere tiempo y dedicación. No esperar ver resultados significativos de la noche a la mañana. Sin embargo, si te mantienes consistente y comprometido con tu entrenamiento, eventualmente verás los beneficios físicos y mentales de esta actividad increíble. ¡Así que no te desanimes y sigue levantando!</p>
         </div>
+        <div id="footer">
+            hecho by yo
+        </div>
     </div>
 </body>
 </html>
